# v8unpack

./: .gitignore  CMAKE_ERRORS_REPORT.md  CMakeLists.txt  CMakeLists.txt.test  COMPLETION_REPORT.md  DEPLOYMENT_README.md  Doxyfile  Makefile  ParseToStringWithFiles.md  README.md  SOLUTION_DIAGRAM.txt  VersionInfo.rc  appveyor.yml  build.sh  d5e20966-24a3-4184-a1b0-e5aa4773c2b8.txt  simple_test  simple_test.cpp  task_progress.txt  test_config.txt  test_metadata_parser  test_metadata_parser.cpp  test_parse_to_string  test_parse_to_string.cpp  test_parsestring.cpp  v8unpack.cbp  v8unpack.nuspec  v8unpack.sln  v8unpack.vcxproj  v8unpack.vcxproj.filters  v8unpack.wxs  vcpkg.json
debian/: changelog  copyright
doc/: ANALYSIS_SUMMARY.md  CLAUDE.md  COMPILE_INSTRUCTIONS.md  DOCS_RU.md  METADATA_PARSER_USAGE.md  OPTIMIZATION_REPORT.md  README_OPTIMIZATIONS.md  SECURITY_AUDIT_REPORT.md  algo_pars.md
package/deb/: builddeb.sh
src/: APIcfBase.cpp  APIcfBase.h  ConfigMetadataParser.h  ConfigStructureParser.cpp  ConfigStructureParser.h  EctoSoftTree.cpp  EctoSoftTree.h  FileFormat.cpp  FileFormat.h  FileTypes.cpp  FileTypes.h  MessageRegistrator.cpp  MessageRegistrator.h  MetaObject.cpp  MetaObject.h  NodeTypes.cpp  NodeTypes.h  Parse_tree.cpp  Parse_tree.h  StringUtils.cpp  StringUtils.h  THashedStringList.cpp  THashedStringList.h  TMSTree.cpp  TMSTree.h  TMetaObjects.h  TStringList.cpp  TStringList.h  V8File.cpp  V8File.cpp.backup  V8File.cpp.bak  V8File.h  V8MetaGuid.h  V8MetaParser.cpp  V8MetaParser.h  VersionFile.h  atree.cpp  atree.h  binarydecimalnumber.cpp  common.cpp  (+43 more)
src/SystemClasses/: System.Classes.hpp
src/metaread/: Base64.cpp  Base64.h
src/utf8/: checked.h
